Fixing issues with a flicker on the billing page // Fixed subscription capturing issues in the callback // ACtively working with Gao on sign out redirect issue

--- a/web/stripe-template/web/components/App.css
+++ b/web/stripe-template/web/components/App.css
@@ -381,7 +381,7 @@ button {
   gap: 12px;
 }
 
-section#customer-card {
+#customer-card {
   display: flex;
   flex-direction: column;
   align-items: center;
